# CryoMonitoring

./: CMakeLists.txt  README.md
ComputeT2Star/: ComputeT2Star.py
ComputeTemp/: CMakeLists.txt  ComputeTemp.py
ComputeTempRelativeR2s/: CMakeLists.txt  ComputeTempRelativeR2s.py
EvaluationScripts/: GenerateR2StarMaps.py  R2StarSampling.py  TempMap.py
